turtleart.lessons.turtleart.Main.CircleSquare.scala.error
Source:9: error: not found: value pie
		avance(2*pie/3.6)
                         ^